Balance sheet now work with cumsum

--- a/main.ipynb
+++ b/main.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -186,26 +186,26 @@
      "output_type": "stream",
      "text": [
       "Balance Sheet:\n",
-      "                      2023    2024    2025       2026         2027         2028         2029         2030         2031         2032      2033\n",
-      "Current Assets       647.0  218.13   51.72  585.94497   920.777141  1101.923622  1465.079874  2713.341547  2930.069775  2021.461531  2210.220\n",
-      "Non-current Assets   453.0  578.40  444.60  310.80000   177.000000    43.200000   272.330000   433.864000   336.198000   238.532000   140.866\n",
-      "Equity              1100.0  796.53  496.32  896.74497  1097.777141  1145.123622  1737.409874  3147.205547  3266.267775  2259.993531  2351.086\n",
-      "Liability              0.0    0.00    0.00    0.00000     0.000000     0.000000     0.000000     0.000000     0.000000     0.000000     0.000\n",
+      "                    2023  2024  2025       2026        2027        2028         2029         2030        2031         2032         2033\n",
+      "Current Assets       0.0   0.0   0.0  154.94497  484.572111  835.195733  1208.155607  1604.877154  2026.87693  2475.768461  2953.268461\n",
+      "Non-current Assets   0.0   0.0   0.0    0.00000    0.000000    0.000000     0.000000     0.000000     0.00000     0.000000     0.000000\n",
+      "Equity               0.0   0.0   0.0  154.94497  484.572111  835.195733  1208.155607  1604.877154  2026.87693  2475.768461  2953.268461\n",
+      "Liability            0.0   0.0   0.0    0.00000    0.000000    0.000000     0.000000     0.000000     0.00000     0.000000     0.000000\n",
       "\n",
       "Income Statement:\n",
-      "                              2023    2024    2025       2026        2027        2028        2029        2030        2031        2032     2033\n",
-      "Revenues                       0.0    0.00    0.00  154.94497  329.627141  350.623622  372.959874  396.721547  421.999775  448.891531  477.500\n",
-      "Cost of Revenues               0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000\n",
-      "Operating Expenses             0.0  212.87  379.28  160.15000  160.150000  160.150000  160.150000  373.020000  379.280000  160.150000  160.150\n",
-      "Depreciation & Amortizations   0.0   90.60  133.80  133.80000  133.800000  133.800000   43.200000   54.466000   97.666000   97.666000   97.666\n",
-      "Interest Expenses              0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000\n",
-      "Tax Ratio                      0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000\n",
+      "                              2023  2024  2025       2026        2027        2028        2029        2030        2031        2032   2033\n",
+      "Revenues                       0.0   0.0   0.0  154.94497  329.627141  350.623622  372.959874  396.721547  421.999775  448.891531  477.5\n",
+      "Cost of Revenues               0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n",
+      "Operating Expenses             0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n",
+      "Depreciation & Amortizations   0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n",
+      "Interest Expenses              0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n",
+      "Tax Ratio                      0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n",
       "\n",
       "Cash Flow Statement:\n",
-      "                2023    2024    2025     2026        2027        2028        2029       2030       2031        2032    2033\n",
-      "Operating CF     0.0 -212.87 -379.28 -5.20503  169.477141  190.473622  212.809874  23.701547  42.719775  288.741531  317.35\n",
-      "Investing CF     0.0    0.00    0.00  0.00000    0.000000    0.000000    0.000000   0.000000   0.000000    0.000000    0.00\n",
-      "Financing CF  1100.0    0.00    0.00  0.00000    0.000000    0.000000    0.000000   0.000000   0.000000    0.000000    0.00\n"
+      "              2023  2024  2025       2026        2027        2028        2029        2030        2031        2032   2033\n",
+      "Operating CF   0.0   0.0   0.0  154.94497  329.627141  350.623622  372.959874  396.721547  421.999775  448.891531  477.5\n",
+      "Investing CF   0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n",
+      "Financing CF   0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n"
      ]
     }
    ],
@@ -215,6 +215,12 @@
     "        self.first_year = first_year\n",
     "        self.duration = duration\n",
     "        self.years = [first_year + i for i in range(duration)]\n",
+    "        self.delta_balance_sheet = pd.DataFrame(0, index=self.years, columns=[\n",
+    "            'Current Assets',\n",
+    "            'Non-current Assets',\n",
+    "            'Equity',\n",
+    "            'Liability'\n",
+    "        ]).astype('float64')\n",
     "        self.balance_sheet = pd.DataFrame(0, index=self.years, columns=[\n",
     "            'Current Assets',\n",
     "            'Non-current Assets',\n",
@@ -240,47 +246,55 @@
     "            raise ValueError(\"Year out of bounds.\")\n",
     "        return year\n",
     "    \n",
+    "    def _update_balance_sheet(self):\n",
+    "        self.balance_sheet = self.delta_balance_sheet.cumsum()\n",
+    "\n",
     "    def finance(self, year, amount, debt=False):\n",
     "        yy = self._get_year_index(year)\n",
     "        self.cash_flow_statement.at[yy, 'Financing CF'] += amount\n",
-    "        for ii in range(yy, self.first_year + self.duration):\n",
-    "            self.balance_sheet.at[ii, 'Current Assets'] += amount\n",
-    "            if debt:\n",
-    "                self.balance_sheet.at[ii, 'Liability'] += amount\n",
-    "            else:\n",
-    "                self.balance_sheet.at[ii, 'Equity'] += amount\n",
+    "        self.delta_balance_sheet.at[yy, 'Current Assets'] += amount\n",
+    "        if debt:\n",
+    "            self.delta_balance_sheet.at[yy, 'Liability'] += amount\n",
+    "        else:\n",
+    "            self.delta_balance_sheet.at[yy, 'Equity'] += amount\n",
+    "        self._update_balance_sheet()\n",
     "    \n",
     "    def build_asset(self, year, amount, amortization_duration, recurring_step):\n",
     "        yy = self._get_year_index(year)\n",
     "        delta = amount / amortization_duration\n",
-    "        for ii in range(amortization_duration + 1):\n",
-    "            if yy + ii >= self.first_year + self.duration:\n",
-    "                break\n",
-    "            jj = yy + ii\n",
-    "            while jj < self.first_year + self.duration:\n",
-    "                self.balance_sheet.at[jj, 'Current Assets'] -= amount\n",
-    "                self.balance_sheet.at[jj, 'Equity'] -= delta * ii\n",
-    "                self.balance_sheet.at[jj, 'Non-current Assets'] += delta * (amortization_duration - ii)\n",
-    "                self.income_statement.at[jj, 'Depreciation & Amortizations'] += delta * (ii != 0)\n",
-    "                jj += recurring_step if recurring_step > 0 else self.duration\n",
+    "        jj = yy\n",
+    "        while jj < self.first_year + self.duration:\n",
+    "            self.delta_balance_sheet.at[jj, 'Current Assets'] -= amount\n",
+    "            self.delta_balance_sheet.at[jj, 'Non-current Assets'] += amount\n",
+    "            for ii in range(1, amortization_duration + 1):\n",
+    "                if jj + ii >= self.first_year + self.duration:\n",
+    "                    break\n",
+    "                self.delta_balance_sheet.at[jj + ii, 'Equity'] -= delta\n",
+    "                self.delta_balance_sheet.at[jj + ii, 'Non-current Assets'] -= delta\n",
+    "                self.income_statement.at[jj + ii, 'Depreciation & Amortizations'] += delta\n",
+    "            jj += recurring_step if recurring_step > 0 else self.duration\n",
+    "        self._update_balance_sheet()\n",
+    "\n",
     "    \n",
     "    def pay_operating_expenses(self, year, amount, recurring_step):\n",
     "        yy = self._get_year_index(year)\n",
     "        while yy < self.first_year + self.duration:\n",
-    "            self.balance_sheet.at[yy, 'Current Assets'] -= amount * (year - yy + 1)\n",
-    "            self.balance_sheet.at[yy, 'Equity'] -= amount * (year - yy + 1)\n",
+    "            self.delta_balance_sheet.at[yy, 'Current Assets'] -= amount\n",
+    "            self.delta_balance_sheet.at[yy, 'Equity'] -= amount\n",
     "            self.cash_flow_statement.at[yy, 'Operating CF'] -= amount\n",
     "            self.income_statement.at[yy, 'Operating Expenses'] += amount\n",
     "            yy += recurring_step if recurring_step > 0 else self.duration\n",
+    "        self._update_balance_sheet()\n",
     "    \n",
     "    def get_revenues(self, year, amount, recurring_step):\n",
     "        yy = self._get_year_index(year)\n",
     "        while yy < self.first_year + self.duration:\n",
-    "            self.cash_flow_statement.at[yy, 'Operating CF'] += amount * (year - yy + 1)\n",
-    "            self.balance_sheet.at[yy, 'Current Assets'] += amount * (year - yy + 1)\n",
-    "            self.balance_sheet.at[yy, 'Equity'] += amount\n",
+    "            self.cash_flow_statement.at[yy, 'Operating CF'] += amount\n",
+    "            self.delta_balance_sheet.at[yy, 'Current Assets'] += amount\n",
+    "            self.delta_balance_sheet.at[yy, 'Equity'] += amount\n",
     "            self.income_statement.at[yy, 'Revenues'] += amount\n",
     "            yy += recurring_step if recurring_step > 0 else self.duration\n",
+    "        self._update_balance_sheet()\n",
     "    \n",
     "    def print_results(self):\n",
     "        print(\"Balance Sheet:\")\n",
@@ -290,21 +304,19 @@
     "        print(\"\\nCash Flow Statement:\")\n",
     "        print(self.cash_flow_statement.T)\n",
     "\n",
-    "# Example usage:\n",
+    "# Usage\n",
     "fp = FinancialPeriod(first_year=2023, duration=simulation_length)\n",
     "fp.finance(year=2023, amount=1100)\n",
-    "fp.build_asset(year=2023, amount=53.67, amortization_duration=5, recurring_step=0)\n",
-    "fp.build_asset(year=2023, amount=127, amortization_duration=5, recurring_step=0)\n",
+    "fp.build_asset(year=2023, amount=53.67,  amortization_duration=5, recurring_step=0)\n",
+    "fp.build_asset(year=2023, amount=127.00, amortization_duration=5, recurring_step=0)\n",
     "fp.build_asset(year=2023, amount=272.33, amortization_duration=5, recurring_step=6)\n",
     "fp.build_asset(year=2024, amount=216.00, amortization_duration=5, recurring_step=6)\n",
     "\n",
-    "# Uncomment to simulate expenses and revenues\n",
     "fp.pay_operating_expenses(year=2025, amount=160.15, recurring_step=1)\n",
     "fp.pay_operating_expenses(year=2024, amount=212.87, recurring_step=6)\n",
     "fp.pay_operating_expenses(year=2025, amount=219.13, recurring_step=6)\n",
-    "\n",
     "for ii in range(0, simulation_length):\n",
-    "    fp.get_revenues(year=time[ii], amount=revenues[ii], recurring_step=0) # revenues\n",
+    "    fp.get_revenues(year=time[ii], amount=revenues[ii], recurring_step=0)\n",
     "\n",
     "fp.print_results()\n"
    ]
