--- a/main.ipynb
+++ b/main.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -186,26 +186,33 @@
      "output_type": "stream",
      "text": [
       "Balance Sheet:\n",
-      "                    2023  2024  2025       2026        2027        2028         2029         2030        2031         2032         2033\n",
-      "Current Assets       0.0   0.0   0.0  154.94497  484.572111  835.195733  1208.155607  1604.877154  2026.87693  2475.768461  2953.268461\n",
-      "Non-current Assets   0.0   0.0   0.0    0.00000    0.000000    0.000000     0.000000     0.000000     0.00000     0.000000     0.000000\n",
-      "Equity               0.0   0.0   0.0  154.94497  484.572111  835.195733  1208.155607  1604.877154  2026.87693  2475.768461  2953.268461\n",
-      "Liability            0.0   0.0   0.0    0.00000    0.000000    0.000000     0.000000     0.000000     0.00000     0.000000     0.000000\n",
+      "                            2023    2024    2025       2026        2027        2028        2029        2030       2031        2032        2033\n",
+      "Current Assets             647.0  218.13 -161.15 -166.35503    3.122111  193.595733  134.075607  -58.222846  -15.50307  273.238461  590.588461\n",
+      "Non-current Assets         453.0  578.40  444.60  310.80000  177.000000   43.200000  272.330000  433.864000  336.19800  238.532000  140.866000\n",
+      "Total Assets              1100.0  796.53  283.45  144.44497  180.122111  236.795733  406.405607  375.641154  320.69493  511.770461  731.454461\n",
+      "Equity                    1100.0  796.53  283.45  144.44497  180.122111  236.795733  406.405607  375.641154  320.69493  511.770461  731.454461\n",
+      "Liability                    0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.00000    0.000000    0.000000\n",
+      "Total Equity n Liability  1100.0  796.53  283.45  144.44497  180.122111  236.795733  406.405607  375.641154  320.69493  511.770461  731.454461\n",
       "\n",
       "Income Statement:\n",
-      "                              2023  2024  2025       2026        2027        2028        2029        2030        2031        2032   2033\n",
-      "Revenues                       0.0   0.0   0.0  154.94497  329.627141  350.623622  372.959874  396.721547  421.999775  448.891531  477.5\n",
-      "Cost of Revenues               0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n",
-      "Operating Expenses             0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n",
-      "Depreciation & Amortizations   0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n",
-      "Interest Expenses              0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n",
-      "Tax Ratio                      0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n",
+      "                              2023    2024    2025       2026        2027        2028        2029        2030        2031        2032     2033\n",
+      "Revenues                       0.0    0.00    0.00  154.94497  329.627141  350.623622  372.959874  396.721547  421.999775  448.891531  477.500\n",
+      "Cost of Revenues               0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000\n",
+      "Gross Profit                   0.0    0.00    0.00  154.94497  329.627141  350.623622  372.959874  396.721547  421.999775  448.891531  477.500\n",
+      "Operating Expenses             0.0  212.87  379.28  160.15000  160.150000  160.150000  160.150000  373.020000  379.280000  160.150000  160.150\n",
+      "EBITDA                         0.0 -212.87 -379.28   -5.20503  169.477141  190.473622  212.809874   23.701547   42.719775  288.741531  317.350\n",
+      "Depreciation & Amortizations   0.0   90.60  133.80  133.80000  133.800000  133.800000   43.200000   54.466000   97.666000   97.666000   97.666\n",
+      "EBIT                           0.0 -303.47 -513.08 -139.00503   35.677141   56.673622  169.609874  -30.764453  -54.946225  191.075531  219.684\n",
+      "Interest Expenses              0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000\n",
+      "Tax Ratio                      0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000\n",
+      "Net Income                     0.0 -303.47 -513.08 -139.00503   35.677141   56.673622  169.609874  -30.764453  -54.946225  191.075531  219.684\n",
       "\n",
       "Cash Flow Statement:\n",
-      "              2023  2024  2025       2026        2027        2028        2029        2030        2031        2032   2033\n",
-      "Operating CF   0.0   0.0   0.0  154.94497  329.627141  350.623622  372.959874  396.721547  421.999775  448.891531  477.5\n",
-      "Investing CF   0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n",
-      "Financing CF   0.0   0.0   0.0    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.0\n"
+      "                      2023    2024    2025     2026        2027        2028        2029       2030       2031        2032    2033\n",
+      "Operating CF           0.0 -212.87 -379.28 -5.20503  169.477141  190.473622  212.809874  23.701547  42.719775  288.741531  317.35\n",
+      "Investing CF           0.0    0.00    0.00  0.00000    0.000000    0.000000    0.000000   0.000000   0.000000    0.000000    0.00\n",
+      "Financing CF        1100.0    0.00    0.00  0.00000    0.000000    0.000000    0.000000   0.000000   0.000000    0.000000    0.00\n",
+      "Net Change in Cash  1100.0 -212.87 -379.28 -5.20503  169.477141  190.473622  212.809874  23.701547  42.719775  288.741531  317.35\n"
      ]
     }
    ],
@@ -218,27 +225,36 @@
     "        self.delta_balance_sheet = pd.DataFrame(0, index=self.years, columns=[\n",
     "            'Current Assets',\n",
     "            'Non-current Assets',\n",
+    "            'Total Assets',\n",
     "            'Equity',\n",
-    "            'Liability'\n",
+    "            'Liability',\n",
+    "            'Total Equity n Liability'\n",
     "        ]).astype('float64')\n",
     "        self.balance_sheet = pd.DataFrame(0, index=self.years, columns=[\n",
     "            'Current Assets',\n",
     "            'Non-current Assets',\n",
+    "            'Total Assets',\n",
     "            'Equity',\n",
-    "            'Liability'\n",
+    "            'Liability',\n",
+    "            'Total Equity n Liability'\n",
     "        ]).astype('float64')\n",
     "        self.income_statement = pd.DataFrame(0, index=self.years, columns=[\n",
     "            'Revenues',\n",
     "            'Cost of Revenues',\n",
+    "            'Gross Profit',\n",
     "            'Operating Expenses',\n",
+    "            'EBITDA',\n",
     "            'Depreciation & Amortizations',\n",
+    "            'EBIT',\n",
     "            'Interest Expenses',\n",
-    "            'Tax Ratio'\n",
+    "            'Tax Ratio',\n",
+    "            'Net Income'\n",
     "        ]).astype('float64')\n",
     "        self.cash_flow_statement = pd.DataFrame(0, index=self.years, columns=[\n",
     "            'Operating CF',\n",
     "            'Investing CF',\n",
-    "            'Financing CF'\n",
+    "            'Financing CF',\n",
+    "            'Net Change in Cash'\n",
     "        ]).astype('float64')\n",
     "        \n",
     "    def _get_year_index(self, year):\n",
@@ -246,8 +262,18 @@
     "            raise ValueError(\"Year out of bounds.\")\n",
     "        return year\n",
     "    \n",
-    "    def _update_balance_sheet(self):\n",
+    "    def _update_derivate_numbers(self):\n",
+    "        # Update income statement derived numbers\n",
+    "        self.income_statement['Gross Profit'] = self.income_statement['Revenues'] - self.income_statement['Cost of Revenues']\n",
+    "        self.income_statement['EBITDA'] = self.income_statement['Gross Profit'] - self.income_statement['Operating Expenses']\n",
+    "        self.income_statement['EBIT'] = self.income_statement['EBITDA'] - self.income_statement['Depreciation & Amortizations']\n",
+    "        self.income_statement['Net Income'] = (self.income_statement['EBIT'] - self.income_statement['Interest Expenses']) * (1 - self.income_statement['Tax Ratio'])\n",
+    "        # Update balance sheet derived numbers\n",
     "        self.balance_sheet = self.delta_balance_sheet.cumsum()\n",
+    "        self.balance_sheet['Total Assets'] = self.balance_sheet['Current Assets'] + self.balance_sheet['Non-current Assets']\n",
+    "        self.balance_sheet['Total Equity n Liability'] = self.balance_sheet['Equity'] + self.balance_sheet['Liability']\n",
+    "        # Update cash flow statements derived numbers\n",
+    "        self.cash_flow_statement['Net Change in Cash'] = self.cash_flow_statement['Operating CF'] + self.cash_flow_statement['Investing CF'] + self.cash_flow_statement['Financing CF']\n",
     "\n",
     "    def finance(self, year, amount, debt=False):\n",
     "        yy = self._get_year_index(year)\n",
@@ -257,7 +283,7 @@
     "            self.delta_balance_sheet.at[yy, 'Liability'] += amount\n",
     "        else:\n",
     "            self.delta_balance_sheet.at[yy, 'Equity'] += amount\n",
-    "        self._update_balance_sheet()\n",
+    "        self._update_derivate_numbers()\n",
     "    \n",
     "    def build_asset(self, year, amount, amortization_duration, recurring_step):\n",
     "        yy = self._get_year_index(year)\n",
@@ -273,7 +299,7 @@
     "                self.delta_balance_sheet.at[jj + ii, 'Non-current Assets'] -= delta\n",
     "                self.income_statement.at[jj + ii, 'Depreciation & Amortizations'] += delta\n",
     "            jj += recurring_step if recurring_step > 0 else self.duration\n",
-    "        self._update_balance_sheet()\n",
+    "        self._update_derivate_numbers()\n",
     "\n",
     "    \n",
     "    def pay_operating_expenses(self, year, amount, recurring_step):\n",
@@ -284,7 +310,7 @@
     "            self.cash_flow_statement.at[yy, 'Operating CF'] -= amount\n",
     "            self.income_statement.at[yy, 'Operating Expenses'] += amount\n",
     "            yy += recurring_step if recurring_step > 0 else self.duration\n",
-    "        self._update_balance_sheet()\n",
+    "        self._update_derivate_numbers()\n",
     "    \n",
     "    def get_revenues(self, year, amount, recurring_step):\n",
     "        yy = self._get_year_index(year)\n",
@@ -294,7 +320,10 @@
     "            self.delta_balance_sheet.at[yy, 'Equity'] += amount\n",
     "            self.income_statement.at[yy, 'Revenues'] += amount\n",
     "            yy += recurring_step if recurring_step > 0 else self.duration\n",
-    "        self._update_balance_sheet()\n",
+    "        self._update_derivate_numbers()\n",
+    "    \n",
+    "    def set_taxes(self):\n",
+    "        pass\n",
     "    \n",
     "    def print_results(self):\n",
     "        print(\"Balance Sheet:\")\n",
