--- a/main.ipynb
+++ b/main.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -186,39 +186,40 @@
      "output_type": "stream",
      "text": [
       "Balance Sheet:\n",
-      "                            2023    2024    2025       2026        2027        2028        2029        2030       2031        2032        2033\n",
-      "Current Assets             647.0  218.13 -161.15 -166.35503    3.122111  193.595733  134.075607  -58.222846  -15.50307  273.238461  590.588461\n",
-      "Non-current Assets         453.0  578.40  444.60  310.80000  177.000000   43.200000  272.330000  433.864000  336.19800  238.532000  140.866000\n",
-      "Total Assets              1100.0  796.53  283.45  144.44497  180.122111  236.795733  406.405607  375.641154  320.69493  511.770461  731.454461\n",
-      "Equity                    1100.0  796.53  283.45  144.44497  180.122111  236.795733  406.405607  375.641154  320.69493  511.770461  731.454461\n",
-      "Liability                    0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.00000    0.000000    0.000000\n",
-      "Total Equity n Liability  1100.0  796.53  283.45  144.44497  180.122111  236.795733  406.405607  375.641154  320.69493  511.770461  731.454461\n",
+      "                             2023   2024    2025    2026   2027   2028   2029   2030   2031   2032   2033\n",
+      "Current Assets             647.00 218.13 -161.15 -166.36   3.12 193.60 134.08 -58.22 -15.50 273.24 590.59\n",
+      "Non-current Assets         453.00 578.40  444.60  310.80 177.00  43.20 272.33 433.86 336.20 238.53 140.87\n",
+      "Total Assets             1,100.00 796.53  283.45  144.44 180.12 236.80 406.41 375.64 320.69 511.77 731.45\n",
+      "Equity                   1,100.00 796.53  283.45  144.44 180.12 236.80 406.41 375.64 320.69 511.77 731.45\n",
+      "Liability                    0.00   0.00    0.00    0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00\n",
+      "Total Equity n Liability 1,100.00 796.53  283.45  144.44 180.12 236.80 406.41 375.64 320.69 511.77 731.45\n",
       "\n",
       "Income Statement:\n",
-      "                              2023    2024    2025       2026        2027        2028        2029        2030        2031        2032     2033\n",
-      "Revenues                       0.0    0.00    0.00  154.94497  329.627141  350.623622  372.959874  396.721547  421.999775  448.891531  477.500\n",
-      "Cost of Revenues               0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000\n",
-      "Gross Profit                   0.0    0.00    0.00  154.94497  329.627141  350.623622  372.959874  396.721547  421.999775  448.891531  477.500\n",
-      "Operating Expenses             0.0  212.87  379.28  160.15000  160.150000  160.150000  160.150000  373.020000  379.280000  160.150000  160.150\n",
-      "EBITDA                         0.0 -212.87 -379.28   -5.20503  169.477141  190.473622  212.809874   23.701547   42.719775  288.741531  317.350\n",
-      "Depreciation & Amortizations   0.0   90.60  133.80  133.80000  133.800000  133.800000   43.200000   54.466000   97.666000   97.666000   97.666\n",
-      "EBIT                           0.0 -303.47 -513.08 -139.00503   35.677141   56.673622  169.609874  -30.764453  -54.946225  191.075531  219.684\n",
-      "Interest Expenses              0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000\n",
-      "Tax Ratio                      0.0    0.00    0.00    0.00000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000000    0.000\n",
-      "Net Income                     0.0 -303.47 -513.08 -139.00503   35.677141   56.673622  169.609874  -30.764453  -54.946225  191.075531  219.684\n",
+      "                              2023    2024    2025    2026   2027   2028   2029   2030   2031   2032   2033\n",
+      "Revenues                      0.00    0.00    0.00  154.94 329.63 350.62 372.96 396.72 422.00 448.89 477.50\n",
+      "Cost of Revenues              0.00    0.00    0.00    0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00\n",
+      "Gross Profit                  0.00    0.00    0.00  154.94 329.63 350.62 372.96 396.72 422.00 448.89 477.50\n",
+      "Operating Expenses            0.00  212.87  379.28  160.15 160.15 160.15 160.15 373.02 379.28 160.15 160.15\n",
+      "EBITDA                        0.00 -212.87 -379.28   -5.21 169.48 190.47 212.81  23.70  42.72 288.74 317.35\n",
+      "Depreciation & Amortizations  0.00   90.60  133.80  133.80 133.80 133.80  43.20  54.47  97.67  97.67  97.67\n",
+      "EBIT                          0.00 -303.47 -513.08 -139.01  35.68  56.67 169.61 -30.76 -54.95 191.08 219.68\n",
+      "Interest Expenses             0.00    0.00    0.00    0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00\n",
+      "Tax Ratio                     0.26    0.26    0.26    0.26   0.26   0.26   0.26   0.26   0.26   0.26   0.26\n",
+      "Net Income                    0.00 -224.57 -379.68 -102.86  26.40  41.94 125.51 -22.77 -40.66 141.40 162.57\n",
       "\n",
       "Cash Flow Statement:\n",
-      "                      2023    2024    2025     2026        2027        2028        2029       2030       2031        2032    2033\n",
-      "Operating CF           0.0 -212.87 -379.28 -5.20503  169.477141  190.473622  212.809874  23.701547  42.719775  288.741531  317.35\n",
-      "Investing CF           0.0    0.00    0.00  0.00000    0.000000    0.000000    0.000000   0.000000   0.000000    0.000000    0.00\n",
-      "Financing CF        1100.0    0.00    0.00  0.00000    0.000000    0.000000    0.000000   0.000000   0.000000    0.000000    0.00\n",
-      "Net Change in Cash  1100.0 -212.87 -379.28 -5.20503  169.477141  190.473622  212.809874  23.701547  42.719775  288.741531  317.35\n"
+      "                       2023    2024    2025  2026   2027   2028   2029  2030  2031   2032   2033\n",
+      "Operating CF           0.00 -212.87 -379.28 -5.21 169.48 190.47 212.81 23.70 42.72 288.74 317.35\n",
+      "Investing CF           0.00    0.00    0.00  0.00   0.00   0.00   0.00  0.00  0.00   0.00   0.00\n",
+      "Financing CF       1,100.00    0.00    0.00  0.00   0.00   0.00   0.00  0.00  0.00   0.00   0.00\n",
+      "Net Change in Cash 1,100.00 -212.87 -379.28 -5.21 169.48 190.47 212.81 23.70 42.72 288.74 317.35\n"
      ]
     }
    ],
    "source": [
+    "pd.options.display.float_format = '{:,.2f}'.format\n",
     "class FinancialPeriod():\n",
-    "    def __init__(self, first_year=2023, duration=11):\n",
+    "    def __init__(self, first_year:int=2023, duration:int=11):\n",
     "        self.first_year = first_year\n",
     "        self.duration = duration\n",
     "        self.years = [first_year + i for i in range(duration)]\n",
@@ -257,7 +258,7 @@
     "            'Net Change in Cash'\n",
     "        ]).astype('float64')\n",
     "        \n",
-    "    def _get_year_index(self, year):\n",
+    "    def _get_year_index(self, year:int):\n",
     "        if year < self.first_year or year >= self.first_year + self.duration:\n",
     "            raise ValueError(\"Year out of bounds.\")\n",
     "        return year\n",
@@ -275,7 +276,7 @@
     "        # Update cash flow statements derived numbers\n",
     "        self.cash_flow_statement['Net Change in Cash'] = self.cash_flow_statement['Operating CF'] + self.cash_flow_statement['Investing CF'] + self.cash_flow_statement['Financing CF']\n",
     "\n",
-    "    def finance(self, year, amount, debt=False):\n",
+    "    def finance(self, year:int, amount:float, debt:bool=False):\n",
     "        yy = self._get_year_index(year)\n",
     "        self.cash_flow_statement.at[yy, 'Financing CF'] += amount\n",
     "        self.delta_balance_sheet.at[yy, 'Current Assets'] += amount\n",
@@ -285,7 +286,7 @@
     "            self.delta_balance_sheet.at[yy, 'Equity'] += amount\n",
     "        self._update_derivate_numbers()\n",
     "    \n",
-    "    def build_asset(self, year, amount, amortization_duration, recurring_step):\n",
+    "    def build_asset(self, year:int, amount:float, amortization_duration:int, recurring_step:int):\n",
     "        yy = self._get_year_index(year)\n",
     "        delta = amount / amortization_duration\n",
     "        jj = yy\n",
@@ -302,7 +303,7 @@
     "        self._update_derivate_numbers()\n",
     "\n",
     "    \n",
-    "    def pay_operating_expenses(self, year, amount, recurring_step):\n",
+    "    def pay_operating_expenses(self, year:int, amount:float, recurring_step:int):\n",
     "        yy = self._get_year_index(year)\n",
     "        while yy < self.first_year + self.duration:\n",
     "            self.delta_balance_sheet.at[yy, 'Current Assets'] -= amount\n",
@@ -312,7 +313,7 @@
     "            yy += recurring_step if recurring_step > 0 else self.duration\n",
     "        self._update_derivate_numbers()\n",
     "    \n",
-    "    def get_revenues(self, year, amount, recurring_step):\n",
+    "    def get_revenues(self, year:int, amount:float, recurring_step:int):\n",
     "        yy = self._get_year_index(year)\n",
     "        while yy < self.first_year + self.duration:\n",
     "            self.cash_flow_statement.at[yy, 'Operating CF'] += amount\n",
@@ -322,8 +323,11 @@
     "            yy += recurring_step if recurring_step > 0 else self.duration\n",
     "        self._update_derivate_numbers()\n",
     "    \n",
-    "    def set_taxes(self):\n",
-    "        pass\n",
+    "    def set_tax_ratios(self, tax_ratios:float|list):\n",
+    "        if isinstance(tax_ratios, list):\n",
+    "            if len(tax_ratios) != self.duration:\n",
+    "                raise ValueError(\"The length of the tax_ratios does not match the duration\")\n",
+    "        self.income_statement['Tax Ratio'] = tax_ratios\n",
     "    \n",
     "    def print_results(self):\n",
     "        print(\"Balance Sheet:\")\n",
@@ -335,6 +339,7 @@
     "\n",
     "# Usage\n",
     "fp = FinancialPeriod(first_year=2023, duration=simulation_length)\n",
+    "fp.set_tax_ratios(.26)\n",
     "fp.finance(year=2023, amount=1100)\n",
     "fp.build_asset(year=2023, amount=53.67,  amortization_duration=5, recurring_step=0)\n",
     "fp.build_asset(year=2023, amount=127.00, amortization_duration=5, recurring_step=0)\n",
