Added taxes and tax shields

--- a/main.ipynb
+++ b/main.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -186,33 +186,34 @@
      "output_type": "stream",
      "text": [
       "Balance Sheet:\n",
-      "                             2023   2024    2025    2026   2027   2028   2029   2030   2031   2032   2033\n",
-      "Current Assets             647.00 218.13 -161.15 -166.36   3.12 193.60 134.08 -58.22 -15.50 273.24 590.59\n",
-      "Non-current Assets         453.00 578.40  444.60  310.80 177.00  43.20 272.33 433.86 336.20 238.53 140.87\n",
-      "Total Assets             1,100.00 796.53  283.45  144.44 180.12 236.80 406.41 375.64 320.69 511.77 731.45\n",
-      "Equity                   1,100.00 796.53  283.45  144.44 180.12 236.80 406.41 375.64 320.69 511.77 731.45\n",
-      "Liability                    0.00   0.00    0.00    0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00\n",
-      "Total Equity n Liability 1,100.00 796.53  283.45  144.44 180.12 236.80 406.41 375.64 320.69 511.77 731.45\n",
+      "                             2023   2024   2025   2026   2027   2028   2029   2030   2031   2032   2033\n",
+      "Current Assets             647.00 269.22 -19.03 -22.99 105.81 250.57 139.98 -58.01 -25.54 193.90 435.09\n",
+      "Non-current Assets         453.00 600.14 498.46 396.77 295.08 193.39 432.89 607.50 533.27 459.04 384.82\n",
+      "Total Assets             1,100.00 869.36 479.42 373.78 400.89 443.96 572.87 549.49 507.73 652.95 819.91\n",
+      "Liability                    0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00\n",
+      "Equity                   1,100.00 869.36 479.42 373.78 400.89 443.96 572.87 549.49 507.73 652.95 819.91\n",
+      "Total Equity n Liability 1,100.00 869.36 479.42 373.78 400.89 443.96 572.87 549.49 507.73 652.95 819.91\n",
       "\n",
       "Income Statement:\n",
-      "                              2023    2024    2025    2026   2027   2028   2029   2030   2031   2032   2033\n",
-      "Revenues                      0.00    0.00    0.00  154.94 329.63 350.62 372.96 396.72 422.00 448.89 477.50\n",
-      "Cost of Revenues              0.00    0.00    0.00    0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00\n",
-      "Gross Profit                  0.00    0.00    0.00  154.94 329.63 350.62 372.96 396.72 422.00 448.89 477.50\n",
-      "Operating Expenses            0.00  212.87  379.28  160.15 160.15 160.15 160.15 373.02 379.28 160.15 160.15\n",
-      "EBITDA                        0.00 -212.87 -379.28   -5.21 169.48 190.47 212.81  23.70  42.72 288.74 317.35\n",
-      "Depreciation & Amortizations  0.00   90.60  133.80  133.80 133.80 133.80  43.20  54.47  97.67  97.67  97.67\n",
-      "EBIT                          0.00 -303.47 -513.08 -139.01  35.68  56.67 169.61 -30.76 -54.95 191.08 219.68\n",
-      "Interest Expenses             0.00    0.00    0.00    0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00\n",
-      "Tax Ratio                     0.26    0.26    0.26    0.26   0.26   0.26   0.26   0.26   0.26   0.26   0.26\n",
-      "Net Income                    0.00 -224.57 -379.68 -102.86  26.40  41.94 125.51 -22.77 -40.66 141.40 162.57\n",
+      "                              2023    2024    2025    2026    2027    2028    2029    2030    2031    2032    2033\n",
+      "Revenues                      0.00    0.00    0.00  154.94  329.63  350.62  372.96  396.72  422.00  448.89  477.50\n",
+      "Cost of Revenues              0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00\n",
+      "Gross Profit                  0.00    0.00    0.00  154.94  329.63  350.62  372.96  396.72  422.00  448.89  477.50\n",
+      "Operating Expenses            0.00 -212.87 -379.28 -160.15 -160.15 -160.15 -160.15 -373.02 -379.28 -160.15 -160.15\n",
+      "EBITDA                        0.00 -212.87 -379.28   -5.21  169.48  190.47  212.81   23.70   42.72  288.74  317.35\n",
+      "Depreciation & Amortizations  0.00  -90.60 -133.80 -133.80 -133.80 -133.80  -43.20  -54.47  -97.67  -97.67  -97.67\n",
+      "EBIT                          0.00 -303.47 -513.08 -139.01   35.68   56.67  169.61  -30.76  -54.95  191.08  219.68\n",
+      "Interest Expenses             0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00\n",
+      "Tax Expenses                 -0.00   72.83  123.14   33.36   -8.56  -13.60  -40.71    7.38   13.19  -45.86  -52.72\n",
+      "Tax Ratio                     0.24    0.24    0.24    0.24    0.24    0.24    0.24    0.24    0.24    0.24    0.24\n",
+      "Net Income                    0.00 -230.64 -389.94 -105.64   27.11   43.07  128.90  -23.38  -41.76  145.22  166.96\n",
       "\n",
       "Cash Flow Statement:\n",
       "                       2023    2024    2025  2026   2027   2028   2029  2030  2031   2032   2033\n",
-      "Operating CF           0.00 -212.87 -379.28 -5.21 169.48 190.47 212.81 23.70 42.72 288.74 317.35\n",
+      "Operating CF           0.00 -140.04 -256.14 28.16 160.91 176.87 172.10 31.09 55.91 242.88 264.63\n",
       "Investing CF           0.00    0.00    0.00  0.00   0.00   0.00   0.00  0.00  0.00   0.00   0.00\n",
       "Financing CF       1,100.00    0.00    0.00  0.00   0.00   0.00   0.00  0.00  0.00   0.00   0.00\n",
-      "Net Change in Cash 1,100.00 -212.87 -379.28 -5.21 169.48 190.47 212.81 23.70 42.72 288.74 317.35\n"
+      "Net Change in Cash 1,100.00 -140.04 -256.14 28.16 160.91 176.87 172.10 31.09 55.91 242.88 264.63\n"
      ]
     }
    ],
@@ -227,16 +228,16 @@
     "            'Current Assets',\n",
     "            'Non-current Assets',\n",
     "            'Total Assets',\n",
-    "            'Equity',\n",
     "            'Liability',\n",
+    "            'Equity',\n",
     "            'Total Equity n Liability'\n",
     "        ]).astype('float64')\n",
     "        self.balance_sheet = pd.DataFrame(0, index=self.years, columns=[\n",
     "            'Current Assets',\n",
     "            'Non-current Assets',\n",
     "            'Total Assets',\n",
-    "            'Equity',\n",
     "            'Liability',\n",
+    "            'Equity',\n",
     "            'Total Equity n Liability'\n",
     "        ]).astype('float64')\n",
     "        self.income_statement = pd.DataFrame(0, index=self.years, columns=[\n",
@@ -248,6 +249,7 @@
     "            'Depreciation & Amortizations',\n",
     "            'EBIT',\n",
     "            'Interest Expenses',\n",
+    "            'Tax Expenses',\n",
     "            'Tax Ratio',\n",
     "            'Net Income'\n",
     "        ]).astype('float64')\n",
@@ -265,10 +267,11 @@
     "    \n",
     "    def _update_derivate_numbers(self):\n",
     "        # Update income statement derived numbers\n",
-    "        self.income_statement['Gross Profit'] = self.income_statement['Revenues'] - self.income_statement['Cost of Revenues']\n",
-    "        self.income_statement['EBITDA'] = self.income_statement['Gross Profit'] - self.income_statement['Operating Expenses']\n",
-    "        self.income_statement['EBIT'] = self.income_statement['EBITDA'] - self.income_statement['Depreciation & Amortizations']\n",
-    "        self.income_statement['Net Income'] = (self.income_statement['EBIT'] - self.income_statement['Interest Expenses']) * (1 - self.income_statement['Tax Ratio'])\n",
+    "        self.income_statement['Gross Profit'] = self.income_statement['Revenues'] + self.income_statement['Cost of Revenues']\n",
+    "        self.income_statement['EBITDA'] = self.income_statement['Gross Profit'] + self.income_statement['Operating Expenses']\n",
+    "        self.income_statement['EBIT'] = self.income_statement['EBITDA'] + self.income_statement['Depreciation & Amortizations']\n",
+    "        self.income_statement['Tax Expenses'] = (self.income_statement['EBIT'] + self.income_statement['Interest Expenses']) * (-self.income_statement['Tax Ratio'])\n",
+    "        self.income_statement['Net Income'] = (self.income_statement['EBIT'] + self.income_statement['Interest Expenses']) * (1 - self.income_statement['Tax Ratio'])\n",
     "        # Update balance sheet derived numbers\n",
     "        self.balance_sheet = self.delta_balance_sheet.cumsum()\n",
     "        self.balance_sheet['Total Assets'] = self.balance_sheet['Current Assets'] + self.balance_sheet['Non-current Assets']\n",
@@ -296,9 +299,11 @@
     "            for ii in range(1, amortization_duration + 1):\n",
     "                if jj + ii >= self.first_year + self.duration:\n",
     "                    break\n",
-    "                self.delta_balance_sheet.at[jj + ii, 'Equity'] -= delta\n",
-    "                self.delta_balance_sheet.at[jj + ii, 'Non-current Assets'] -= delta\n",
-    "                self.income_statement.at[jj + ii, 'Depreciation & Amortizations'] += delta\n",
+    "                tax = self.income_statement.at[jj + ii, 'Tax Ratio']\n",
+    "                self.delta_balance_sheet.at[jj + ii, 'Equity'] -= delta * (1 - tax)\n",
+    "                self.delta_balance_sheet.at[jj + ii, 'Non-current Assets'] -= delta * (1 - tax)\n",
+    "                self.income_statement.at[jj + ii, 'Depreciation & Amortizations'] -= delta\n",
+    "                self.cash_flow_statement.at[jj + ii, 'Operating CF'] += delta * tax\n",
     "            jj += recurring_step if recurring_step > 0 else self.duration\n",
     "        self._update_derivate_numbers()\n",
     "\n",
@@ -306,19 +311,21 @@
     "    def pay_operating_expenses(self, year:int, amount:float, recurring_step:int):\n",
     "        yy = self._get_year_index(year)\n",
     "        while yy < self.first_year + self.duration:\n",
-    "            self.delta_balance_sheet.at[yy, 'Current Assets'] -= amount\n",
-    "            self.delta_balance_sheet.at[yy, 'Equity'] -= amount\n",
-    "            self.cash_flow_statement.at[yy, 'Operating CF'] -= amount\n",
-    "            self.income_statement.at[yy, 'Operating Expenses'] += amount\n",
+    "            tax = self.income_statement.at[yy, 'Tax Ratio']\n",
+    "            self.delta_balance_sheet.at[yy, 'Current Assets'] -= amount * (1 - tax)\n",
+    "            self.delta_balance_sheet.at[yy, 'Equity'] -= amount * (1 - tax)\n",
+    "            self.cash_flow_statement.at[yy, 'Operating CF'] -= amount * (1 - tax)\n",
+    "            self.income_statement.at[yy, 'Operating Expenses'] -= amount\n",
     "            yy += recurring_step if recurring_step > 0 else self.duration\n",
     "        self._update_derivate_numbers()\n",
     "    \n",
     "    def get_revenues(self, year:int, amount:float, recurring_step:int):\n",
     "        yy = self._get_year_index(year)\n",
     "        while yy < self.first_year + self.duration:\n",
-    "            self.cash_flow_statement.at[yy, 'Operating CF'] += amount\n",
-    "            self.delta_balance_sheet.at[yy, 'Current Assets'] += amount\n",
-    "            self.delta_balance_sheet.at[yy, 'Equity'] += amount\n",
+    "            tax = self.income_statement.at[yy, 'Tax Ratio']\n",
+    "            self.delta_balance_sheet.at[yy, 'Current Assets'] += amount * (1 - tax)\n",
+    "            self.delta_balance_sheet.at[yy, 'Equity'] += amount * (1 - tax)\n",
+    "            self.cash_flow_statement.at[yy, 'Operating CF'] += amount * (1 - tax)\n",
     "            self.income_statement.at[yy, 'Revenues'] += amount\n",
     "            yy += recurring_step if recurring_step > 0 else self.duration\n",
     "        self._update_derivate_numbers()\n",
@@ -339,7 +346,7 @@
     "\n",
     "# Usage\n",
     "fp = FinancialPeriod(first_year=2023, duration=simulation_length)\n",
-    "fp.set_tax_ratios(.26)\n",
+    "fp.set_tax_ratios(.24)\n",
     "fp.finance(year=2023, amount=1100)\n",
     "fp.build_asset(year=2023, amount=53.67,  amortization_duration=5, recurring_step=0)\n",
     "fp.build_asset(year=2023, amount=127.00, amortization_duration=5, recurring_step=0)\n",
