Completed the scheduler

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -47,8 +47,8 @@
       "3   Non-recurring  2023                  0    Exprivia                        Payload Data Ground Segment         25.00     Their Website\n",
       "4   Non-recurring  2023                  0  Telespazio                          Flight Operations Segment        100.00  NPV Costellation\n",
       "5   Non-recurring  2023                  0      e-GEOS                         Development of Marketplace          1.00       Same as CDS\n",
-      "6       Recurring  2024                  6        AVIO                                           Lunch B1        212.87  NPV Costellation\n",
-      "7       Recurring  2025                  6        AVIO                                           Lunch B2        219.13  NPV Costellation\n",
+      "6       Recurring  2024                  6        AVIO                                          Launch B1        212.87  NPV Costellation\n",
+      "7       Recurring  2025                  6        AVIO                                          Launch B2        219.13  NPV Costellation\n",
       "8       Recurring  2025                  1           ?           Ground Facilities Maintenance and Upkeep         45.00  NPV Costellation\n",
       "9       Recurring  2025                  1           ?                           Constellation Operations        100.00  NPV Costellation\n",
       "10      Recurring  2025                  1           ?         Program Management and Systems Engineering         14.50    Copernicus CS3\n",
@@ -98,12 +98,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Revenues"
+    "## Market Demand Simulator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -173,12 +173,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Financial Statements"
+    "## Financial Statements Simulator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -359,6 +359,119 @@
     "for ii in range(0, simulation_length):\n",
     "    fp.get_revenues(year=time[ii], amount=revenues[ii], recurring_step=0)\n",
     "\n",
+    "fp.print_results()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scheduler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Activities:\n",
+      "                                              type    begin   amount  duration  amortization duration  recurring\n",
+      "name                                                                                                            \n",
+      "Finance                                    finance 2,023.00 1,100.00         0                      0          0\n",
+      "Satellite b1 RnD                       build_asset 2,023.00    53.67         1                      5          0\n",
+      "Infrastructure Development             build_asset 2,023.00   127.00         1                      5          0\n",
+      "Satellite b1 Development               build_asset 2,023.00   272.33         1                      5          6\n",
+      "Satellite b2 Development               build_asset 2,024.00   216.00         1                      5          6\n",
+      "Operation Infrastructure    pay_operating_expenses 2,025.00   160.15         1                      0          1\n",
+      "Satellite b1 Launch         pay_operating_expenses 2,024.00   212.87         1                      0          6\n",
+      "Satellite b2 Launch         pay_operating_expenses 2,025.00   219.13         1                      0          6\n",
+      "\n",
+      "\n",
+      "Balance Sheet:\n",
+      "                             2023   2024   2025   2026   2027   2028   2029   2030   2031   2032   2033\n",
+      "Current Assets             647.00 269.22 -19.03 -22.99 105.81 250.57 139.98 -58.01 -25.54 193.90 435.09\n",
+      "Non-current Assets         453.00 600.14 498.46 396.77 295.08 193.39 432.89 607.50 533.27 459.04 384.82\n",
+      "Total Assets             1,100.00 869.36 479.42 373.78 400.89 443.96 572.87 549.49 507.73 652.95 819.91\n",
+      "Liability                    0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00   0.00\n",
+      "Equity                   1,100.00 869.36 479.42 373.78 400.89 443.96 572.87 549.49 507.73 652.95 819.91\n",
+      "Total Equity n Liability 1,100.00 869.36 479.42 373.78 400.89 443.96 572.87 549.49 507.73 652.95 819.91\n",
+      "\n",
+      "Income Statement:\n",
+      "                              2023    2024    2025    2026    2027    2028    2029    2030    2031    2032    2033\n",
+      "Revenues                      0.00    0.00    0.00  154.94  329.63  350.62  372.96  396.72  422.00  448.89  477.50\n",
+      "Cost of Revenues              0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00\n",
+      "Gross Profit                  0.00    0.00    0.00  154.94  329.63  350.62  372.96  396.72  422.00  448.89  477.50\n",
+      "Operating Expenses            0.00 -212.87 -379.28 -160.15 -160.15 -160.15 -160.15 -373.02 -379.28 -160.15 -160.15\n",
+      "EBITDA                        0.00 -212.87 -379.28   -5.21  169.48  190.47  212.81   23.70   42.72  288.74  317.35\n",
+      "Depreciation & Amortizations  0.00  -90.60 -133.80 -133.80 -133.80 -133.80  -43.20  -54.47  -97.67  -97.67  -97.67\n",
+      "EBIT                          0.00 -303.47 -513.08 -139.01   35.68   56.67  169.61  -30.76  -54.95  191.08  219.68\n",
+      "Interest Expenses             0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00    0.00\n",
+      "Tax Expenses                 -0.00   72.83  123.14   33.36   -8.56  -13.60  -40.71    7.38   13.19  -45.86  -52.72\n",
+      "Tax Ratio                     0.24    0.24    0.24    0.24    0.24    0.24    0.24    0.24    0.24    0.24    0.24\n",
+      "Net Income                    0.00 -230.64 -389.94 -105.64   27.11   43.07  128.90  -23.38  -41.76  145.22  166.96\n",
+      "\n",
+      "Cash Flow Statement:\n",
+      "                       2023    2024    2025  2026   2027   2028   2029  2030  2031   2032   2033\n",
+      "Operating CF           0.00 -140.04 -256.14 28.16 160.91 176.87 172.10 31.09 55.91 242.88 264.63\n",
+      "Investing CF           0.00    0.00    0.00  0.00   0.00   0.00   0.00  0.00  0.00   0.00   0.00\n",
+      "Financing CF       1,100.00    0.00    0.00  0.00   0.00   0.00   0.00  0.00  0.00   0.00   0.00\n",
+      "Net Change in Cash 1,100.00 -140.04 -256.14 28.16 160.91 176.87 172.10 31.09 55.91 242.88 264.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the project parameters\n",
+    "project_begin = 2023\n",
+    "satellite_lifespan = 5\n",
+    "satellite_launch_delay = 0\n",
+    "simulation_length = 11\n",
+    "tax_rate = .24\n",
+    "\n",
+    "# Define activities in a structured manner\n",
+    "activities = pd.DataFrame([\n",
+    "    {\"name\": \"Finance\",                    \"type\": \"finance\",                \"begin\": project_begin, \"amount\": 1100.00, \"duration\": 0, \"amortization duration\": 0, \"recurring\": 0},\n",
+    "    {\"name\": \"Satellite b1 RnD\",           \"type\": \"build_asset\",            \"begin\": project_begin, \"amount\":   53.67, \"duration\": 1, \"amortization duration\": 5, \"recurring\": 0},\n",
+    "    {\"name\": \"Infrastructure Development\", \"type\": \"build_asset\",            \"begin\": project_begin, \"amount\":  127.00, \"duration\": 1, \"amortization duration\": 5, \"recurring\": 0},\n",
+    "    {\"name\": \"Satellite b1 Development\",   \"type\": \"build_asset\",            \"begin\": project_begin, \"amount\":  272.33, \"duration\": 1, \"amortization duration\": 5, \"recurring\": satellite_lifespan + 1},\n",
+    "    {\"name\": \"Satellite b2 Development\",   \"type\": \"build_asset\",            \"begin\": None,          \"amount\":  216.00, \"duration\": 1, \"amortization duration\": 5, \"recurring\": satellite_lifespan + 1},\n",
+    "    {\"name\": \"Operation Infrastructure\",   \"type\": \"pay_operating_expenses\", \"begin\": None,          \"amount\":  160.15, \"duration\": 1, \"amortization duration\": 0, \"recurring\": 1},\n",
+    "    {\"name\": \"Satellite b1 Launch\",        \"type\": \"pay_operating_expenses\", \"begin\": None,          \"amount\":  212.87, \"duration\": 1, \"amortization duration\": 0, \"recurring\": satellite_lifespan + 1},\n",
+    "    {\"name\": \"Satellite b2 Launch\",        \"type\": \"pay_operating_expenses\", \"begin\": None,          \"amount\":  219.13, \"duration\": 1, \"amortization duration\": 0, \"recurring\": satellite_lifespan + 1}\n",
+    "])\n",
+    "activities.set_index(\"name\", inplace=True)\n",
+    "\n",
+    "# Calculate the begin times for dependent activities\n",
+    "activities.at[\"Satellite b2 Development\", \"begin\"] = activities.at[\"Satellite b1 Development\", \"begin\"] + activities.at[\"Satellite b1 Development\", \"duration\"]\n",
+    "activities.at[\"Satellite b1 Launch\", \"begin\"] = activities.at[\"Satellite b1 Development\", \"begin\"] + activities.at[\"Satellite b1 Development\", \"duration\"] + satellite_launch_delay\n",
+    "activities.at[\"Satellite b2 Launch\", \"begin\"] = activities.at[\"Satellite b2 Development\", \"begin\"] + activities.at[\"Satellite b2 Development\", \"duration\"] + satellite_launch_delay\n",
+    "activities.at[\"Operation Infrastructure\", \"begin\"] = activities.at[\"Satellite b1 Launch\", \"begin\"] + activities.at[\"Satellite b1 Launch\", \"duration\"]\n",
+    "\n",
+    "\n",
+    "# Initialize the FinancialPeriod\n",
+    "fp = FinancialPeriod(first_year=project_begin, duration=simulation_length)\n",
+    "fp.set_tax_ratios(tax_rate)\n",
+    "\n",
+    "# Process each activity in the DataFrame\n",
+    "for name, activity in activities.iterrows():\n",
+    "    if activity[\"type\"] == \"finance\":\n",
+    "        fp.finance(year=activity[\"begin\"], amount=activity[\"amount\"])\n",
+    "    elif activity[\"type\"] == \"build_asset\":\n",
+    "        fp.build_asset(year=activity[\"begin\"], amount=activity[\"amount\"], amortization_duration=activity[\"amortization duration\"], recurring_step=activity[\"recurring\"])\n",
+    "    elif activity[\"type\"] == \"pay_operating_expenses\":\n",
+    "        fp.pay_operating_expenses(year=activity[\"begin\"], amount=activity[\"amount\"], recurring_step=activity[\"recurring\"])\n",
+    "\n",
+    "# Simulate the revenues\n",
+    "for ii in range(simulation_length):\n",
+    "    fp.get_revenues(year=time[ii], amount=revenues[ii], recurring_step=0)\n",
+    "\n",
+    "# Print the results\n",
+    "print('Activities:')\n",
+    "print(activities)\n",
+    "print('\\n')\n",
     "fp.print_results()\n"
    ]
   }
